# proj_sample

./: CMakeLists.txt  main.cpp  mingw-pthread-workaround.patch
